maze.wallfollower.WallFollowerMaze.scala.error
Erreur de compilation :
WallFollowerMaze:18: error: Unmatched closing brace '}' ignored here
}
^